--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,11 @@
     <script src="collections/SongQueue.js"></script>
     <script src="models/AppModel.js"></script>
 
+
     <script src="views/PlayerView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
+
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
@@ -23,9 +27,7 @@
       $(function(){
         // set up model objects
         var library = new Songs(songData);
-        var queue = new SongQueue();
-        //var queue = new SongQueue();
-        var app = new AppModel({library: library, queue: queue});
+        var app = new AppModel({library: library});
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
