--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
 
     <script>
       $(function(){
-        // set up model objects
+        // set up model
         var library = new Songs(songData);
         var app = new AppModel({library: library});
 
